--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                       type="text"
                       class="form-control"
                       placeholder="Write an item to add"
-                      aria-label="Write an item to add"
-                      aria-describedby="addon-wrapping"
+                      v-model="items.item"
+                      @keyup.enter="addItem"
                     />
                   </div>
 
                   <!-- Adding item button -->
-                  <button type="button" class="btn btn-dark mt-3">Add an item</button>
+                  <button @click="addItem" type="button" class="btn btn-dark mt-3">Add an item</button>
 
                 </div>
               </div>
